--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,20 @@
 absl-py==0.9.0
 astunparse==1.6.3
 attrs==19.3.0
+Automat==20.2.0
 backcall==0.2.0
 bleach==3.1.5
 blis==0.4.1
 cachetools==4.1.0
 catalogue==1.0.0
 certifi==2020.4.5.1
+cffi==1.14.2
 chardet==3.0.4
+constantly==15.1.0
+cryptography==3.0
+cssselect==1.1.0
 cycler==0.10.0
 cymem==2.0.3
-de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-2.2.5/de_core_news_sm-2.2.5.tar.gz
 decorator==4.4.2
 defusedxml==0.6.0
 dill==0.3.1.1
@@ -26,19 +30,25 @@ googleapis-common-protos==1.52.0
 graphviz==0.14
 grpcio==1.29.0
 h5py==2.10.0
+hyperlink==20.0.1
 idna==2.9
+incremental==17.5.0
 ipykernel==5.3.0
 ipython==7.15.0
 ipython-genutils==0.2.0
 ipywidgets==7.5.1
+itemadapter==0.1.0
+itemloaders==1.0.2
 jedi==0.17.0
 Jinja2==2.11.2
+jmespath==0.10.0
 joblib==0.15.1
 jsonschema==3.2.0
 jupyter-client==6.1.3
 jupyter-core==4.6.3
 Keras-Preprocessing==1.1.2
 kiwisolver==1.2.0
+lxml==4.5.2
 Markdown==3.2.2
 MarkupSafe==1.1.1
 matplotlib==3.2.1
@@ -53,6 +63,7 @@ opt-einsum==3.2.1
 packaging==20.4
 pandas==1.0.5
 pandocfilters==1.4.2
+parsel==1.6.0
 parso==0.7.0
 pexpect==4.8.0
 pickleshare==0.7.5
@@ -62,24 +73,32 @@ preshed==3.0.2
 prometheus-client==0.8.0
 promise==2.3
 prompt-toolkit==3.0.5
+Protego==0.1.16
 protobuf==3.12.2
 ptyprocess==0.6.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pycparser==2.20
+PyDispatcher==2.0.5
 pydot==1.4.1
 pydotplus==2.0.2
 Pygments==2.6.1
+PyHamcrest==2.0.2
+pyOpenSSL==19.1.0
 pyparsing==2.4.7
 pyrsistent==0.16.0
 python-dateutil==2.8.1
 pytz==2020.1
 pyzmq==19.0.1
+queuelib==1.5.0
 requests==2.23.0
 requests-oauthlib==1.3.0
 rsa==4.0
 scikit-learn==0.23.1
 scipy==1.4.1
+Scrapy==2.3.0
 Send2Trash==1.5.0
+service-identity==18.1.0
 six==1.15.0
 sklearn==0.0
 spacy==2.2.4
@@ -98,7 +117,9 @@ threadpoolctl==2.1.0
 tornado==6.0.4
 tqdm==4.46.1
 traitlets==4.3.3
+Twisted==20.3.0
 urllib3==1.25.9
+w3lib==1.22.0
 wasabi==0.6.0
 wcwidth==0.2.4
 webencodings==0.5.1
@@ -106,3 +127,4 @@ Werkzeug==1.0.1
 widgetsnbextension==3.5.1
 wordcloud==1.7.0
 wrapt==1.12.1
+zope.interface==5.1.0
