--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ cryptography==3.0
 cssselect==1.1.0
 cycler==0.10.0
 cymem==2.0.3
+de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-2.2.5/de_core_news_sm-2.2.5.tar.gz
 decorator==4.4.2
 defusedxml==0.6.0
 dill==0.3.1.1
@@ -105,7 +106,6 @@ spacy==2.2.4
 srsly==1.0.2
 tensorboard==2.2.2
 tensorboard-plugin-wit==1.6.0.post3
-tensorflow==2.2.0
 tensorflow-datasets==3.1.0
 tensorflow-estimator==2.2.0
 tensorflow-metadata==0.22.2
